kubernetes/system-update-page/production/system-update-page-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: system-update-page
  name: system-update-page
  namespace: production
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: system-update-page
      name: system-update-page
    spec:
      containers:
      - name: system-update-page
        image: narrativecompany/system-update-page:2019-01-25-01
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: sup
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            cpu: .25
            memory: 128M
          limits:
            cpu: 1
            memory: 1024M
      imagePullSecrets:
        - name: narrativecompany-docker
