kubernetes/system-update-page/production/system-update-page-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/limit-connections: "30"
    nginx.ingress.kubernetes.io/limit-rate: "262144"
    nginx.ingress.kubernetes.io/limit-rps: "15"
    kubernetes.io/ingress.class: "nginx"
  name: system-update-page
  namespace: production
spec:
  rules:
  - host: www.narrative.org
    http:
      paths:
      - backend:
          serviceName: system-update-page
          servicePort: 80
  tls:
  - secretName: namecheap-narrative-org
    hosts:
      - www.narrative.org
